--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Richard920-hkpolyu.github.io/Little-Lemon-Restaurant",
+  "homepage": "http://Richard920-hkpolyu.github.io/lemon",
   "name": "lemon",
   "version": "0.1.0",
   "private": true,
